# stend

./: .gitignore  CMakeLists.txt  all.hpp  config.cpp  config.hpp  stend.cbp  stend.depend  stend.layout  various.cpp
R_scripts/: sec_per_frame.r
display/: display.cpp  display.hpp
doxygen/: doxyfile
lib/: image.cpp  image.hpp  interface.h  interface.hpp  lua.cpp  lua.hpp  matrix.cpp  matrix.hpp  module.cpp  module.hpp  opencv.cpp  opencv.hpp
main_loop/: display.hpp  main_loop.cpp  main_loop.hpp
stat/: scripts.qrc  stat.cpp  stat.hpp
stat/scripts/: sec_per_frame.r
ui/console/: console.cbp  console.layout  display.cpp  main.cpp
ui/gui/: main.cpp
ui/gui/resources/: resources.qrc
ui/gui/resources/dialogs/: about_dialog.ui  main_window.ui
ui/gui/ui/: display.cpp  lua_highlighter.cpp  lua_highlighter.hpp  main_window.cpp  main_window.hpp
